# python-web-learn

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  blog_series_template.md  harness_requirements.md  main.py  pyproject.toml  python_tutorial_plan.md  week01_blog_post.md  week01_ch01_data_model_merged.md  week01_post_01_len_iter.md  week01_post_02_contains.md  week01_post_03_repr.md  week01_post_04_getitem.md
chapters/ch01-data-model/: README.md  week01_blog_post.md  week01_ch01_data_model_merged.md  week01_post_01_len_iter.md  week01_post_02_contains.md  week01_post_03_repr.md  week01_post_04_getitem.md
chapters/ch01-data-model/src/week01_data_model/: order_book.py
docs/: blog_series_template.md  python_decorators_and_annotations_vs_java.md
flasky/flasky/: README.md
src/week01_data_model/: __init__.py  order_book.py
tests/: test_order_book.py
