[project]
name = "week01-data-model"
version = "0.1.0"
description = "Week 1 learning project: Python data model and special methods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["flasky"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
exclude = "^(flasky/)"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
