[project]
name = "fluent-python-tutorial"
version = "0.1.0"
description = "Learning repo aligned with Fluent Python (2nd Edition)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["flasky"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["chapters/ch01-data-model/src"]
exclude = "^(flasky/)"

[tool.pytest.ini_options]
pythonpath = ["chapters/ch01-data-model/src"]
testpaths = ["chapters/ch01-data-model/tests"]
